# Search-Engine-with-TF-IDF-Ranking-

./: .dockerignore  Dockerfile  README.md
SearchEngine/: CMakeLists.txt  README.md  build.sh
SearchEngine/data/: Artificial_Intelligence.txt  DSA.txt  Database.txt  Software_Engineering.txt  Web_Development.txt
SearchEngine/include/core/: SearchEngine.h
SearchEngine/include/server/: Server.h
SearchEngine/src/core/: SearchEngine.cpp
SearchEngine/src/server/: Server.cpp  main.cpp
SearchEngine/web/: index.html  script.js  style.css
